fix horizontal scroll

--- a/footer/__copyright-text/footer__copyright-text.css
+++ b/footer/__copyright-text/footer__copyright-text.css
@@ -1,7 +1,7 @@
 .footer__copyright-text {
   margin: 0;
   padding: 0;
-  margin-right: 37px;
+  padding-right: 37px;
   box-sizing: border-box;
   color: #7B878F;
   font-size: 14px;
